--- a/Findi/build.gradle
+++ b/Findi/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+	implementation 'org.springframework.boot:spring-boot-starter-mail'//웹메일시스템
 }
 
 tasks.named('test') {
