--- a/Findi/build.gradle
+++ b/Findi/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
 	implementation 'org.jsoup:jsoup:1.17.2'
+
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 tasks.named('test') {
