--- a/chatbot/data/nlu.yml
+++ b/chatbot/data/nlu.yml
@@ -28,6 +28,7 @@ nlu:
       - 학교 정보 알려줘
       - 학교에 대한 정보 필요해
       - 학교 정보
+      - 학교 정보 알려줘
 
   # 학교 위치
   - intent: get_school_location
@@ -77,6 +78,16 @@ nlu:
       - [상경대학](faculty_name)
       - [소프트웨어융합대학](faculty_name) 정보 알려줘
       - [의료보건생활대학](faculty_name) 정보
+      - 공과대학
+      - 상경대학
+      - 인문사회과학대학
+      - 의료보건생활대학
+      - 예술디자인체육대학
+      - 소프트웨어융합대학
+      - 한의과대학
+      - 미래융합대학
+      - 자유전공
+      - 동의지천융합대학
 
   - intent: get_department_info
     examples: |
@@ -88,6 +99,88 @@ nlu:
       - [전자공학과](department_name) 정보 알려줘
       - [전기공학과](department_name) 정보에 대해 궁금해
       - [전기공학과](department_name)
+      - 국어국문학과
+      - 중어중국학과
+      - 일본학과
+      - 영어영문학과
+      - 문헌정보학과
+      - 평생교육·청소년상담학과
+      - 심리학과
+      - 아동학과
+      - 유아교육과
+      - 광고홍보학과
+      - 미디어커뮤니케이션학과
+      - 법학과
+      - 경찰행정학과
+      - 소방방재행정학과
+      - 행정학과
+      - 사회복지학과
+      - 디지털콘텐츠학과
+      - 금융경영학과
+      - 재무부동산학과
+      - 무역학과
+      - 유통물류학과
+      - 스마트항만물류학과
+      - 창업투자경영학과
+      - 경영학과
+      - 회계학과
+      - 경영정보학과
+      - e비즈니스학과
+      - 국제관광경영학과
+      - 호텔·컨벤션경영학과
+      - 외식경영학과
+      - 스마트호스피탈리티학과
+      - 라이프융합학부
+      - 스타트업창업투자학
+      - 뷰티비즈니스학
+      - 라이프생활문화학
+      - 부동산자산경영학부
+      - 부동산투자학
+      - 부동산개발경영학
+      - 간호학과
+      - 임상병리학과
+      - 치위생학과
+      - 방사선학과
+      - 의료경영학과
+      - 물리치료학과
+      - 식품영양학과
+      - 기계공학과
+      - 로봇공학과
+      - 자동차공학과
+      - 조선해양공학과
+      - 신소재공학과
+      - 건축학과
+      - 건축공학과
+      - 토목공학과
+      - 도시공학과
+      - 환경공학과
+      - 화학공학과
+      - 화장품공학과
+      - 의생명공학과
+      - 바이오의약공학과
+      - 식품공학과
+      - 인간공학과
+      - 산업경영빅데이터공학과
+      - 제품디자인공학과
+      - 전기공학과
+      - 전자공학과
+      - 미래모빌리티학과
+      - 컴퓨터공학과
+      - 컴퓨터소프트웨어공학과
+      - 응용소프트웨어공학과
+      - 인공지능학과
+      - 게임공학과
+      - 소프트웨어융합학과
+      - 영화학과
+      - 패션디자인학과
+      - 체육학과
+      - 레저스포츠학과
+      - 태권도학과
+      - 경기지도학과
+      - 음악학과
+      - 디자인조형학과
+      - K-뷰티학과
+      - 한의예과
 
 #--------------------------------------------------
   - intent: ask_category_professor
@@ -141,8 +234,32 @@ nlu:
 
   - intent: select_building
     examples: |
-      - /select_building{"building_name":"대학본관"}
-      - /select_building{"building_name":"공학관"}
+      - [대학본관](building_name)
+      - [법정관](building_name)
+      - [상경관](building_name)
+      - [동의의료원](building_name)
+      - [국제관](building_name)
+      - [동의스포츠센터](building_name)
+      - [상영관(제2학생회관)](building_name)
+      - [수덕전(학생회관)](building_name)
+      - [제1인문관](building_name)
+      - [제2인문관](building_name)
+      - [효민체육관](building_name)
+      - [중앙도서관](building_name)
+      - [여대생커리어개발](building_name)
+      - [제2효민생활관](building_name)
+      - [제1효민생활관](building_name)
+      - [의료보건관](building_name)
+      - [생활과학관](building_name)
+      - [음악관](building_name)
+      - [창의관](building_name)
+      - [지천관](building_name)
+      - [산학협력관](building_name)
+      - [건윤관](building_name)
+      - [공학관](building_name)
+      - [정보공학관](building_name)
+      - [학생군사교육단](building_name)
+      - [행복기숙사(미래생활관)](building_name)
 
   # 시설 정보
 #  - intent: get_facility_info
