--- a/chatbot/config.yml
+++ b/chatbot/config.yml
@@ -11,7 +11,6 @@ pipeline:
   - name: SpacyFeaturizer           # spaCy 벡터화
 
   - name: RegexEntityExtractor      # 정규식 기반 엔티티 추출
-    # Optional: 정규식 패턴은 nlu.yml 또는 별도 파일에서 설정
 
   - name: CountVectorsFeaturizer    # 단어 기반 벡터 특성 추출 (BoW)
   - name: DIETClassifier
@@ -35,4 +34,12 @@ policies:
     epochs: 30
     constrain_similarities: true
 
+  - name: RulePolicy
+    core_fallback_action_name: "action_default_fallback"
+    core_fallback_threshold: 0.3
+    enable_fallback_prediction: True
+
+  - name: TEDPolicy
+    max_history: 5
+    epochs: 100
 assistant_id: 20250603-013017-ecru-rosemary
