--- a/Findi/src/main/resources/application.properties
+++ b/Findi/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=8082
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=jiminlee.033@gmail.com
